parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CARACTER_INVALIDO
    CLOSE_URL_LINK
    CONTENT
    TAG_ERRONEO
    URL

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> DOCTYPE gen_article
Rule 2     gen_article -> OPEN_ARTICLE gen_allart CLOSE_ARTICLE
Rule 3     gen_allart -> gen_info gen_titl gen_data gen_secciones
Rule 4     gen_allart -> gen_info gen_data gen_secciones
Rule 5     gen_allart -> gen_titl gen_data gen_secciones
Rule 6     gen_allart -> gen_data gen_secciones
Rule 7     gen_allart -> gen_titl gen_data
Rule 8     gen_allart -> gen_data
Rule 9     gen_allart -> gen_info gen_data
Rule 10    gen_data -> gen_list
Rule 11    gen_data -> gen_important
Rule 12    gen_data -> gen_para
Rule 13    gen_data -> gen_simp
Rule 14    gen_data -> adr
Rule 15    gen_data -> mo
Rule 16    gen_data -> gen_table
Rule 17    gen_data -> gen_com
Rule 18    gen_data -> gen_abs
Rule 19    gen_data -> gen_list gen_data
Rule 20    gen_data -> gen_important gen_data
Rule 21    gen_data -> gen_para gen_data
Rule 22    gen_data -> gen_simp gen_data
Rule 23    gen_data -> adr gen_data
Rule 24    gen_data -> mo gen_data
Rule 25    gen_data -> gen_table gen_data
Rule 26    gen_data -> gen_com gen_data
Rule 27    gen_data -> gen_abs gen_data
Rule 28    gen_secciones -> gen_section gen_secciones
Rule 29    gen_secciones -> gen_simpsec gen_secciones
Rule 30    gen_secciones -> gen_section
Rule 31    gen_secciones -> gen_simpsec
Rule 32    gen_section -> OPEN_SECTION gen_allart CLOSE_SECTION
Rule 33    gen_simpsec -> OPEN_SIMPLE_SECTION simpsec CLOSE_SIMPLE_SECTION
Rule 34    simpsec -> gen_info gen_titl gen_data
Rule 35    simpsec -> gen_info gen_data
Rule 36    simpsec -> gen_data gen_secciones
Rule 37    simpsec -> gen_titl gen_data
Rule 38    simpsec -> gen_data
Rule 39    gen_info -> OPEN_INFO info CLOSE_INFO
Rule 40    info -> mo
Rule 41    info -> gen_abs
Rule 42    info -> adr
Rule 43    info -> gen_aut
Rule 44    info -> gen_date
Rule 45    info -> gen_copy
Rule 46    info -> gen_titl
Rule 47    info -> mo info
Rule 48    info -> gen_abs info
Rule 49    info -> adr info
Rule 50    info -> gen_aut info
Rule 51    info -> gen_date info
Rule 52    info -> gen_copy info
Rule 53    info -> gen_titl info
Rule 54    gen_abs -> OPEN_ABSTRACT gen_titl infoab CLOSE_ABSTRACT
Rule 55    gen_abs -> OPEN_ABSTRACT infoab CLOSE_ABSTRACT
Rule 56    infoab -> gen_para
Rule 57    infoab -> gen_simp
Rule 58    infoab -> gen_para infoab
Rule 59    infoab -> gen_simp infoab
Rule 60    adr -> OPEN_ADDRESS genad CLOSE_ADDRESS
Rule 61    adr -> OPEN_ADDRESS TEXTO CLOSE_ADDRESS
Rule 62    genad -> gen_street
Rule 63    genad -> gen_state
Rule 64    genad -> gen_city
Rule 65    genad -> gen_phone
Rule 66    genad -> gen_email
Rule 67    genad -> TEXTO
Rule 68    genad -> gen_street genad
Rule 69    genad -> gen_state genad
Rule 70    genad -> gen_city genad
Rule 71    genad -> gen_phone genad
Rule 72    genad -> gen_email genad
Rule 73    genad -> TEXTO genad
Rule 74    gen_aut -> OPEN_AUTHOR aut CLOSE_AUTHOR
Rule 75    aut -> gen_firstn
Rule 76    aut -> gen_surn
Rule 77    aut -> gen_firstn aut
Rule 78    aut -> gen_surn aut
Rule 79    gen_copy -> OPEN_COPYRIGHT copy CLOSE_COPYRIGHT
Rule 80    copy -> gen_year
Rule 81    copy -> gen_year gen_holder
Rule 82    gen_firstn -> OPEN_FIRST_NAME genall CLOSE_FIRST_NAME
Rule 83    gen_surn -> OPEN_SURNAME genall CLOSE_SURNAME
Rule 84    gen_street -> OPEN_STREET genall CLOSE_STREET
Rule 85    gen_city -> OPEN_CITY genall CLOSE_CITY
Rule 86    gen_state -> OPEN_STATE genall CLOSE_STATE
Rule 87    gen_phone -> OPEN_PHONE genall CLOSE_PHONE
Rule 88    gen_email -> OPEN_EMAIL genall CLOSE_EMAIL
Rule 89    gen_date -> OPEN_DATE genall CLOSE_DATE
Rule 90    gen_year -> OPEN_YEAR genall CLOSE_YEAR
Rule 91    gen_holder -> OPEN_HOLDER genall CLOSE_HOLDER
Rule 92    genall -> TEXTO
Rule 93    genall -> gen_link
Rule 94    genall -> gen_emp
Rule 95    genall -> gen_com
Rule 96    genall -> TEXTO genall
Rule 97    genall -> gen_link genall
Rule 98    genall -> gen_emp genall
Rule 99    genall -> gen_com genall
Rule 100   gen_titl -> OPEN_TITLE cont_tit CLOSE_TITLE
Rule 101   cont_tit -> TEXTO
Rule 102   cont_tit -> gen_emp
Rule 103   cont_tit -> gen_link
Rule 104   cont_tit -> gen_email
Rule 105   cont_tit -> TEXTO cont_tit
Rule 106   cont_tit -> gen_emp cont_tit
Rule 107   cont_tit -> gen_email cont_tit
Rule 108   cont_tit -> gen_link cont_tit
Rule 109   gen_simp -> OPEN_SIMPARA conex CLOSE_SIMPARA
Rule 110   gen_emp -> OPEN_EMPHASIS conex CLOSE_EMPHASIS
Rule 111   gen_link -> OPEN_LINK conex CLOSE_LINK
Rule 112   gen_com -> OPEN_COMMENT conex CLOSE_COMMENT
Rule 113   conex -> TEXTO
Rule 114   conex -> gen_emp
Rule 115   conex -> gen_link
Rule 116   conex -> gen_email
Rule 117   conex -> gen_aut
Rule 118   conex -> gen_com
Rule 119   conex -> gen_emp conex
Rule 120   conex -> TEXTO conex
Rule 121   conex -> gen_link conex
Rule 122   conex -> gen_email conex
Rule 123   conex -> gen_aut conex
Rule 124   conex -> gen_com conex
Rule 125   gen_para -> OPEN_PARA op_para CLOSE_PARA
Rule 126   op_para -> TEXTO
Rule 127   op_para -> gen_link
Rule 128   op_para -> gen_emp
Rule 129   op_para -> gen_email
Rule 130   op_para -> gen_aut
Rule 131   op_para -> gen_com
Rule 132   op_para -> gen_list
Rule 133   op_para -> gen_important
Rule 134   op_para -> adr
Rule 135   op_para -> mo
Rule 136   op_para -> gen_table
Rule 137   op_para -> TEXTO op_para
Rule 138   op_para -> gen_link op_para
Rule 139   op_para -> gen_emp op_para
Rule 140   op_para -> gen_email op_para
Rule 141   op_para -> gen_aut op_para
Rule 142   op_para -> gen_com op_para
Rule 143   op_para -> gen_list op_para
Rule 144   op_para -> gen_important op_para
Rule 145   op_para -> adr op_para
Rule 146   op_para -> mo op_para
Rule 147   op_para -> gen_table op_para
Rule 148   gen_important -> OPEN_IMPORTANT gen_titl important CLOSE_IMPORTANT
Rule 149   gen_important -> OPEN_IMPORTANT important CLOSE_IMPORTANT
Rule 150   important -> gen_list
Rule 151   important -> gen_important
Rule 152   important -> gen_para
Rule 153   important -> gen_simp
Rule 154   important -> adr
Rule 155   important -> mo
Rule 156   important -> gen_table
Rule 157   important -> gen_com
Rule 158   important -> gen_abs
Rule 159   important -> gen_list important
Rule 160   important -> gen_important important
Rule 161   important -> gen_para important
Rule 162   important -> gen_simp important
Rule 163   important -> adr important
Rule 164   important -> mo important
Rule 165   important -> gen_table important
Rule 166   important -> gen_com important
Rule 167   important -> gen_abs important
Rule 168   gen_list -> OPEN_ITEMIZED_LIST item CLOSE_ITEMIZED_LIST
Rule 169   item -> OPEN_LIST_ITEM newlist CLOSE_LIST_ITEM
Rule 170   newlist -> gen_important
Rule 171   newlist -> gen_para
Rule 172   newlist -> gen_simp
Rule 173   newlist -> gen_list
Rule 174   newlist -> gen_table
Rule 175   newlist -> mo
Rule 176   newlist -> gen_com
Rule 177   newlist -> gen_abs
Rule 178   newlist -> gen_important newlist
Rule 179   newlist -> gen_para newlist
Rule 180   newlist -> gen_simp newlist
Rule 181   newlist -> gen_list newlist
Rule 182   newlist -> gen_table newlist
Rule 183   newlist -> mo newlist
Rule 184   newlist -> gen_com newlist
Rule 185   newlist -> gen_abs newlist
Rule 186   mo -> OPEN_MEDIA j CLOSE_MEDIA
Rule 187   j -> gen_info video r
Rule 188   j -> gen_info image r
Rule 189   j -> r
Rule 190   r -> image
Rule 191   r -> video
Rule 192   r -> image r
Rule 193   r -> video r
Rule 194   video -> OPEN_VIDEO_OBJECT info OPEN_VIDEO_DATA VIDEO_DATA CLOSE_MEDBRAC CLOSE_VIDEO_DATA CLOSE_VIDEO_OBJECT
Rule 195   video -> OPEN_VIDEO_OBJECT OPEN_VIDEO_DATA VIDEO_DATA CLOSE_MEDBRAC CLOSE_VIDEO_DATA CLOSE_VIDEO_OBJECT
Rule 196   image -> OPEN_IMAGE_OBJECT info OPEN_IMAGEDATA IMAGE_DATA CLOSE_MEDBRAC CLOSE_IMAGE_OBJECT
Rule 197   image -> OPEN_IMAGE_OBJECT OPEN_IMAGEDATA IMAGE_DATA CLOSE_MEDBRAC CLOSE_IMAGEDATA CLOSE_IMAGE_OBJECT
Rule 198   gen_listitem -> OPEN_ITEMIZED_LIST conex3 CLOSE_ITEMIZED_LIST
Rule 199   conex3 -> fin
Rule 200   conex3 -> conex3 fin
Rule 201   fin -> gen_important
Rule 202   fin -> gen_para
Rule 203   fin -> gen_simp
Rule 204   fin -> adr
Rule 205   fin -> gen_listitem
Rule 206   fin -> mo
Rule 207   fin -> gen_table
Rule 208   fin -> gen_com
Rule 209   fin -> gen_abs
Rule 210   fin -> gen_important conex3
Rule 211   fin -> gen_para conex3
Rule 212   fin -> gen_simp conex3
Rule 213   fin -> adr conex3
Rule 214   fin -> gen_listitem conex3
Rule 215   fin -> mo conex3
Rule 216   fin -> gen_table conex3
Rule 217   fin -> gen_com conex3
Rule 218   fin -> gen_abs conex3
Rule 219   gen_table -> OPEN_TABLE inf_tb CLOSE_TABLE
Rule 220   inf_tb -> mo
Rule 221   inf_tb -> t_group
Rule 222   inf_tb -> mo inf_tb
Rule 223   inf_tb -> t_group inf_tb
Rule 224   t_group -> OPEN_T_GROUP gen_tgroup CLOSE_T_GROUP
Rule 225   gen_tgroup -> t_head t_body t_foot
Rule 226   gen_tgroup -> t_body t_foot
Rule 227   gen_tgroup -> t_head t_body
Rule 228   gen_tgroup -> t_body
Rule 229   t_head -> OPEN_HEAD row CLOSE_HEAD
Rule 230   t_body -> OPEN_BODY row CLOSE_BODY
Rule 231   t_foot -> OPEN_FOOT row CLOSE_FOOT
Rule 232   row -> OPEN_ROW entry CLOSE_ROW row
Rule 233   row -> OPEN_ROW entry CLOSE_ROW
Rule 234   row -> OPEN_ROW entry_tb CLOSE_ROW
Rule 235   row -> OPEN_ROW entry_tb CLOSE_ROW row
Rule 236   entry_tb -> OPEN_ENTRYTBL t_head t_body CLOSE_ENTRYTBL
Rule 237   entry -> OPEN_ENTRY gen_entry CLOSE_ENTRY
Rule 238   gen_entry -> TEXTO gen_entry
Rule 239   gen_entry -> OPEN_ITEMIZED_LIST
Rule 240   gen_entry -> gen_important
Rule 241   gen_entry -> gen_para
Rule 242   gen_entry -> gen_simp
Rule 243   gen_entry -> mo
Rule 244   gen_entry -> gen_com
Rule 245   gen_entry -> gen_abs
Rule 246   gen_entry -> TEXTO
Rule 247   gen_entry -> gen_listitem gen_entry
Rule 248   gen_entry -> gen_important gen_entry
Rule 249   gen_entry -> gen_para gen_entry
Rule 250   gen_entry -> gen_simp gen_entry
Rule 251   gen_entry -> mo gen_entry
Rule 252   gen_entry -> gen_com gen_entry
Rule 253   gen_entry -> gen_abs gen_entry

Terminals, with rules where they appear

CARACTER_INVALIDO    : 
CLOSE_ABSTRACT       : 54 55
CLOSE_ADDRESS        : 60 61
CLOSE_ARTICLE        : 2
CLOSE_AUTHOR         : 74
CLOSE_BODY           : 230
CLOSE_CITY           : 85
CLOSE_COMMENT        : 112
CLOSE_COPYRIGHT      : 79
CLOSE_DATE           : 89
CLOSE_EMAIL          : 88
CLOSE_EMPHASIS       : 110
CLOSE_ENTRY          : 237
CLOSE_ENTRYTBL       : 236
CLOSE_FIRST_NAME     : 82
CLOSE_FOOT           : 231
CLOSE_HEAD           : 229
CLOSE_HOLDER         : 91
CLOSE_IMAGEDATA      : 197
CLOSE_IMAGE_OBJECT   : 196 197
CLOSE_IMPORTANT      : 148 149
CLOSE_INFO           : 39
CLOSE_ITEMIZED_LIST  : 168 198
CLOSE_LINK           : 111
CLOSE_LIST_ITEM      : 169
CLOSE_MEDBRAC        : 194 195 196 197
CLOSE_MEDIA          : 186
CLOSE_PARA           : 125
CLOSE_PHONE          : 87
CLOSE_ROW            : 232 233 234 235
CLOSE_SECTION        : 32
CLOSE_SIMPARA        : 109
CLOSE_SIMPLE_SECTION : 33
CLOSE_STATE          : 86
CLOSE_STREET         : 84
CLOSE_SURNAME        : 83
CLOSE_TABLE          : 219
CLOSE_TITLE          : 100
CLOSE_T_GROUP        : 224
CLOSE_URL_LINK       : 
CLOSE_VIDEO_DATA     : 194 195
CLOSE_VIDEO_OBJECT   : 194 195
CLOSE_YEAR           : 90
CONTENT              : 
DOCTYPE              : 1
IMAGE_DATA           : 196 197
OPEN_ABSTRACT        : 54 55
OPEN_ADDRESS         : 60 61
OPEN_ARTICLE         : 2
OPEN_AUTHOR          : 74
OPEN_BODY            : 230
OPEN_CITY            : 85
OPEN_COMMENT         : 112
OPEN_COPYRIGHT       : 79
OPEN_DATE            : 89
OPEN_EMAIL           : 88
OPEN_EMPHASIS        : 110
OPEN_ENTRY           : 237
OPEN_ENTRYTBL        : 236
OPEN_FIRST_NAME      : 82
OPEN_FOOT            : 231
OPEN_HEAD            : 229
OPEN_HOLDER          : 91
OPEN_IMAGEDATA       : 196 197
OPEN_IMAGE_OBJECT    : 196 197
OPEN_IMPORTANT       : 148 149
OPEN_INFO            : 39
OPEN_ITEMIZED_LIST   : 168 198 239
OPEN_LINK            : 111
OPEN_LIST_ITEM       : 169
OPEN_MEDIA           : 186
OPEN_PARA            : 125
OPEN_PHONE           : 87
OPEN_ROW             : 232 233 234 235
OPEN_SECTION         : 32
OPEN_SIMPARA         : 109
OPEN_SIMPLE_SECTION  : 33
OPEN_STATE           : 86
OPEN_STREET          : 84
OPEN_SURNAME         : 83
OPEN_TABLE           : 219
OPEN_TITLE           : 100
OPEN_T_GROUP         : 224
OPEN_VIDEO_DATA      : 194 195
OPEN_VIDEO_OBJECT    : 194 195
OPEN_YEAR            : 90
TAG_ERRONEO          : 
TEXTO                : 61 67 73 92 96 101 105 113 120 126 137 238 246
URL                  : 
VIDEO_DATA           : 194 195
error                : 

Nonterminals, with rules where they appear

adr                  : 14 23 42 49 134 145 154 163 204 213
aut                  : 74 77 78
conex                : 109 110 111 112 119 120 121 122 123 124
conex3               : 198 200 210 211 212 213 214 215 216 217 218
cont_tit             : 100 105 106 107 108
copy                 : 79
entry                : 232 233
entry_tb             : 234 235
fin                  : 199 200
gen_abs              : 18 27 41 48 158 167 177 185 209 218 245 253
gen_allart           : 2 32
gen_article          : 1
gen_aut              : 43 50 117 123 130 141
gen_city             : 64 70
gen_com              : 17 26 95 99 118 124 131 142 157 166 176 184 208 217 244 252
gen_copy             : 45 52
gen_data             : 3 4 5 6 7 8 9 19 20 21 22 23 24 25 26 27 34 35 36 37 38
gen_date             : 44 51
gen_email            : 66 72 104 107 116 122 129 140
gen_emp              : 94 98 102 106 114 119 128 139
gen_entry            : 237 238 247 248 249 250 251 252 253
gen_firstn           : 75 77
gen_holder           : 81
gen_important        : 11 20 133 144 151 160 170 178 201 210 240 248
gen_info             : 3 4 9 34 35 187 188
gen_link             : 93 97 103 108 115 121 127 138
gen_list             : 10 19 132 143 150 159 173 181
gen_listitem         : 205 214 247
gen_para             : 12 21 56 58 152 161 171 179 202 211 241 249
gen_phone            : 65 71
gen_secciones        : 3 4 5 6 28 29 36
gen_section          : 28 30
gen_simp             : 13 22 57 59 153 162 172 180 203 212 242 250
gen_simpsec          : 29 31
gen_state            : 63 69
gen_street           : 62 68
gen_surn             : 76 78
gen_table            : 16 25 136 147 156 165 174 182 207 216
gen_tgroup           : 224
gen_titl             : 3 5 7 34 37 46 53 54 148
gen_year             : 80 81
genad                : 60 68 69 70 71 72 73
genall               : 82 83 84 85 86 87 88 89 90 91 96 97 98 99
image                : 188 190 192
important            : 148 149 159 160 161 162 163 164 165 166 167
inf_tb               : 219 222 223
info                 : 39 47 48 49 50 51 52 53 194 196
infoab               : 54 55 58 59
inicio               : 0
item                 : 168
j                    : 186
mo                   : 15 24 40 47 135 146 155 164 175 183 206 215 220 222 243 251
newlist              : 169 178 179 180 181 182 183 184 185
op_para              : 125 137 138 139 140 141 142 143 144 145 146 147
r                    : 187 188 189 192 193
row                  : 229 230 231 232 235
simpsec              : 33
t_body               : 225 226 227 228 236
t_foot               : 225 226
t_group              : 221 223
t_head               : 225 227 236
video                : 187 191 193

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . DOCTYPE gen_article

    DOCTYPE         shift and go to state 2

    inicio                         shift and go to state 1

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> DOCTYPE . gen_article
    (2) gen_article -> . OPEN_ARTICLE gen_allart CLOSE_ARTICLE

    OPEN_ARTICLE    shift and go to state 4

    gen_article                    shift and go to state 3

state 3

    (1) inicio -> DOCTYPE gen_article .

    $end            reduce using rule 1 (inicio -> DOCTYPE gen_article .)


state 4

    (2) gen_article -> OPEN_ARTICLE . gen_allart CLOSE_ARTICLE
    (3) gen_allart -> . gen_info gen_titl gen_data gen_secciones
    (4) gen_allart -> . gen_info gen_data gen_secciones
    (5) gen_allart -> . gen_titl gen_data gen_secciones
    (6) gen_allart -> . gen_data gen_secciones
    (7) gen_allart -> . gen_titl gen_data
    (8) gen_allart -> . gen_data
    (9) gen_allart -> . gen_info gen_data
    (39) gen_info -> . OPEN_INFO info CLOSE_INFO
    (100) gen_titl -> . OPEN_TITLE cont_tit CLOSE_TITLE
    (10) gen_data -> . gen_list
    (11) gen_data -> . gen_important
    (12) gen_data -> . gen_para
    (13) gen_data -> . gen_simp
    (14) gen_data -> . adr
    (15) gen_data -> . mo
    (16) gen_data -> . gen_table
    (17) gen_data -> . gen_com
    (18) gen_data -> . gen_abs
    (19) gen_data -> . gen_list gen_data
    (20) gen_data -> . gen_important gen_data
    (21) gen_data -> . gen_para gen_data
    (22) gen_data -> . gen_simp gen_data
    (23) gen_data -> . adr gen_data
    (24) gen_data -> . mo gen_data
    (25) gen_data -> . gen_table gen_data
    (26) gen_data -> . gen_com gen_data
    (27) gen_data -> . gen_abs gen_data
    (168) gen_list -> . OPEN_ITEMIZED_LIST item CLOSE_ITEMIZED_LIST
    (148) gen_important -> . OPEN_IMPORTANT gen_titl important CLOSE_IMPORTANT
    (149) gen_important -> . OPEN_IMPORTANT important CLOSE_IMPORTANT
    (125) gen_para -> . OPEN_PARA op_para CLOSE_PARA
    (109) gen_simp -> . OPEN_SIMPARA conex CLOSE_SIMPARA
    (60) adr -> . OPEN_ADDRESS genad CLOSE_ADDRESS
    (61) adr -> . OPEN_ADDRESS TEXTO CLOSE_ADDRESS
    (186) mo -> . OPEN_MEDIA j CLOSE_MEDIA
    (219) gen_table -> . OPEN_TABLE inf_tb CLOSE_TABLE
    (112) gen_com -> . OPEN_COMMENT conex CLOSE_COMMENT
    (54) gen_abs -> . OPEN_ABSTRACT gen_titl infoab CLOSE_ABSTRACT
    (55) gen_abs -> . OPEN_ABSTRACT infoab CLOSE_ABSTRACT

    OPEN_INFO       shift and go to state 9
    OPEN_TITLE      shift and go to state 10
    OPEN_ITEMIZED_LIST shift and go to state 20
    OPEN_IMPORTANT  shift and go to state 21
    OPEN_PARA       shift and go to state 22
    OPEN_SIMPARA    shift and go to state 23
    OPEN_ADDRESS    shift and go to state 24
    OPEN_MEDIA      shift and go to state 25
    OPEN_TABLE      shift and go to state 26
    OPEN_COMMENT    shift and go to state 27
    OPEN_ABSTRACT   shift and go to state 28

    gen_allart                     shift and go to state 5
    gen_info                       shift and go to state 6
    gen_titl                       shift and go to state 7
    gen_data                       shift and go to state 8
    gen_list                       shift and go to state 11
    gen_important                  shift and go to state 12
    gen_para                       shift and go to state 13
    gen_simp                       shift and go to state 14
    adr                            shift and go to state 15
    mo                             shift and go to state 16
    gen_table                      shift and go to state 17
    gen_com                        shift and go to state 18
    gen_abs                        shift and go to state 19

state 5

    (2) gen_article -> OPEN_ARTICLE gen_allart . CLOSE_ARTICLE

    CLOSE_ARTICLE   shift and go to state 29


state 6

    (3) gen_allart -> gen_info . gen_titl gen_data gen_secciones
    (4) gen_allart -> gen_info . gen_data gen_secciones
    (9) gen_allart -> gen_info . gen_data
    (100) gen_titl -> . OPEN_TITLE cont_tit CLOSE_TITLE
    (10) gen_data -> . gen_list
    (11) gen_data -> . gen_important
    (12) gen_data -> . gen_para
    (13) gen_data -> . gen_simp
    (14) gen_data -> . adr
    (15) gen_data -> . mo
    (16) gen_data -> . gen_table
    (17) gen_data -> . gen_com
    (18) gen_data -> . gen_abs
    (19) gen_data -> . gen_list gen_data
    (20) gen_data -> . gen_important gen_data
    (21) gen_data -> . gen_para gen_data
    (22) gen_data -> . gen_simp gen_data
    (23) gen_data -> . adr gen_data
    (24) gen_data -> . mo gen_data
    (25) gen_data -> . gen_table gen_data
    (26) gen_data -> . gen_com gen_data
    (27) gen_data -> . gen_abs gen_data
    (168) gen_list -> . OPEN_ITEMIZED_LIST item CLOSE_ITEMIZED_LIST
    (148) gen_important -> . OPEN_IMPORTANT gen_titl important CLOSE_IMPORTANT
    (149) gen_important -> . OPEN_IMPORTANT important CLOSE_IMPORTANT
    (125) gen_para -> . OPEN_PARA op_para CLOSE_PARA
    (109) gen_simp -> . OPEN_SIMPARA conex CLOSE_SIMPARA
    (60) adr -> . OPEN_ADDRESS genad CLOSE_ADDRESS
    (61) adr -> . OPEN_ADDRESS TEXTO CLOSE_ADDRESS
    (186) mo -> . OPEN_MEDIA j CLOSE_MEDIA
    (219) gen_table -> . OPEN_TABLE inf_tb CLOSE_TABLE
    (112) gen_com -> . OPEN_COMMENT conex CLOSE_COMMENT
    (54) gen_abs -> . OPEN_ABSTRACT gen_titl infoab CLOSE_ABSTRACT
    (55) gen_abs -> . OPEN_ABSTRACT infoab CLOSE_ABSTRACT

    OPEN_TITLE      shift and go to state 10
    OPEN_ITEMIZED_LIST shift and go to state 20
    OPEN_IMPORTANT  shift and go to state 21
    OPEN_PARA       shift and go to state 22
    OPEN_SIMPARA    shift and go to state 23
    OPEN_ADDRESS    shift and go to state 24
    OPEN_MEDIA      shift and go to state 25
    OPEN_TABLE      shift and go to state 26
    OPEN_COMMENT    shift and go to state 27
    OPEN_ABSTRACT   shift and go to state 28

    gen_titl                       shift and go to state 30
    gen_data                       shift and go to state 31
    gen_list                       shift and go to state 11
    gen_important                  shift and go to state 12
    gen_para                       shift and go to state 13
    gen_simp                       shift and go to state 14
    adr                            shift and go to state 15
    mo                             shift and go to state 16
    gen_table                      shift and go to state 17
    gen_com                        shift and go to state 18
    gen_abs                        shift and go to state 19

state 7

    (5) gen_allart -> gen_titl . gen_data gen_secciones
    (7) gen_allart -> gen_titl . gen_data
    (10) gen_data -> . gen_list
    (11) gen_data -> . gen_important
    (12) gen_data -> . gen_para
    (13) gen_data -> . gen_simp
    (14) gen_data -> . adr
    (15) gen_data -> . mo
    (16) gen_data -> . gen_table
    (17) gen_data -> . gen_com
    (18) gen_data -> . gen_abs
    (19) gen_data -> . gen_list gen_data
    (20) gen_data -> . gen_important gen_data
    (21) gen_data -> . gen_para gen_data
    (22) gen_data -> . gen_simp gen_data
    (23) gen_data -> . adr gen_data
    (24) gen_data -> . mo gen_data
    (25) gen_data -> . gen_table gen_data
    (26) gen_data -> . gen_com gen_data
    (27) gen_data -> . gen_abs gen_data
    (168) gen_list -> . OPEN_ITEMIZED_LIST item CLOSE_ITEMIZED_LIST
    (148) gen_important -> . OPEN_IMPORTANT gen_titl important CLOSE_IMPORTANT
    (149) gen_important -> . OPEN_IMPORTANT important CLOSE_IMPORTANT
    (125) gen_para -> . OPEN_PARA op_para CLOSE_PARA
    (109) gen_simp -> . OPEN_SIMPARA conex CLOSE_SIMPARA
    (60) adr -> . OPEN_ADDRESS genad CLOSE_ADDRESS
    (61) adr -> . OPEN_ADDRESS TEXTO CLOSE_ADDRESS
    (186) mo -> . OPEN_MEDIA j CLOSE_MEDIA
    (219) gen_table -> . OPEN_TABLE inf_tb CLOSE_TABLE
    (112) gen_com -> . OPEN_COMMENT conex CLOSE_COMMENT
    (54) gen_abs -> . OPEN_ABSTRACT gen_titl infoab CLOSE_ABSTRACT
    (55) gen_abs -> . OPEN_ABSTRACT infoab CLOSE_ABSTRACT

    OPEN_ITEMIZED_LIST shift and go to state 20
    OPEN_IMPORTANT  shift and go to state 21
    OPEN_PARA       shift and go to state 22
    OPEN_SIMPARA    shift and go to state 23
    OPEN_ADDRESS    shift and go to state 24
    OPEN_MEDIA      shift and go to state 25
    OPEN_TABLE      shift and go to state 26
    OPEN_COMMENT    shift and go to state 27
    OPEN_ABSTRACT   shift and go to state 28

    gen_data                       shift and go to state 32
    gen_list                       shift and go to state 11
    gen_important                  shift and go to state 12
    gen_para                       shift and go to state 13
    gen_simp                       shift and go to state 14
    adr                            shift and go to state 15
    mo                             shift and go to state 16
    gen_table                      shift and go to state 17
    gen_com                        shift and go to state 18
    gen_abs                        shift and go to state 19

state 8

    (6) gen_allart -> gen_data . gen_secciones
    (8) gen_allart -> gen_data .
    (28) gen_secciones -> . gen_section gen_secciones
    (29) gen_secciones -> . gen_simpsec gen_secciones
    (30) gen_secciones -> . gen_section
    (31) gen_secciones -> . gen_simpsec
    (32) gen_section -> . OPEN_SECTION gen_allart CLOSE_SECTION
    (33) gen_simpsec -> . OPEN_SIMPLE_SECTION simpsec CLOSE_SIMPLE_SECTION

    CLOSE_ARTICLE   reduce using rule 8 (gen_allart -> gen_data .)
    CLOSE_SECTION   reduce using rule 8 (gen_allart -> gen_data .)
    OPEN_SECTION    shift and go to state 36
    OPEN_SIMPLE_SECTION shift and go to state 37

    gen_secciones                  shift and go to state 33
    gen_section                    shift and go to state 34
    gen_simpsec                    shift and go to state 35

state 9

    (39) gen_info -> OPEN_INFO . info CLOSE_INFO
    (40) info -> . mo
    (41) info -> . gen_abs
    (42) info -> . adr
    (43) info -> . gen_aut
    (44) info -> . gen_date
    (45) info -> . gen_copy
    (46) info -> . gen_titl
    (47) info -> . mo info
    (48) info -> . gen_abs info
    (49) info -> . adr info
    (50) info -> . gen_aut info
    (51) info -> . gen_date info
    (52) info -> . gen_copy info
    (53) info -> . gen_titl info
    (186) mo -> . OPEN_MEDIA j CLOSE_MEDIA
    (54) gen_abs -> . OPEN_ABSTRACT gen_titl infoab CLOSE_ABSTRACT
    (55) gen_abs -> . OPEN_ABSTRACT infoab CLOSE_ABSTRACT
    (60) adr -> . OPEN_ADDRESS genad CLOSE_ADDRESS
    (61) adr -> . OPEN_ADDRESS TEXTO CLOSE_ADDRESS
    (74) gen_aut -> . OPEN_AUTHOR aut CLOSE_AUTHOR
    (89) gen_date -> . OPEN_DATE genall CLOSE_DATE
    (79) gen_copy -> . OPEN_COPYRIGHT copy CLOSE_COPYRIGHT
    (100) gen_titl -> . OPEN_TITLE cont_tit CLOSE_TITLE

    OPEN_MEDIA      shift and go to state 25
    OPEN_ABSTRACT   shift and go to state 28
    OPEN_ADDRESS    shift and go to state 24
    OPEN_AUTHOR     shift and go to state 46
    OPEN_DATE       shift and go to state 47
    OPEN_COPYRIGHT  shift and go to state 48
    OPEN_TITLE      shift and go to state 10

    info                           shift and go to state 38
    mo                             shift and go to state 39
    gen_abs                        shift and go to state 40
    adr                            shift and go to state 41
    gen_aut                        shift and go to state 42
    gen_date                       shift and go to state 43
    gen_copy                       shift and go to state 44
    gen_titl                       shift and go to state 45

state 10

    (100) gen_titl -> OPEN_TITLE . cont_tit CLOSE_TITLE
    (101) cont_tit -> . TEXTO
    (102) cont_tit -> . gen_emp
    (103) cont_tit -> . gen_link
    (104) cont_tit -> . gen_email
    (105) cont_tit -> . TEXTO cont_tit
    (106) cont_tit -> . gen_emp cont_tit
    (107) cont_tit -> . gen_email cont_tit
    (108) cont_tit -> . gen_link cont_tit
    (110) gen_emp -> . OPEN_EMPHASIS conex CLOSE_EMPHASIS
    (111) gen_link -> . OPEN_LINK conex CLOSE_LINK
    (88) gen_email -> . OPEN_EMAIL genall CLOSE_EMAIL

    TEXTO           shift and go to state 50
    OPEN_EMPHASIS   shift and go to state 54
    OPEN_LINK       shift and go to state 55
    OPEN_EMAIL      shift and go to state 56

    cont_tit                       shift and go to state 49
    gen_emp                        shift and go to state 51
    gen_link                       shift and go to state 52
    gen_email                      shift and go to state 53

state 11
